--- a/rails_frontend/app/views/grants/index-results.html.erb
+++ b/rails_frontend/app/views/grants/index-results.html.erb
@@ -1,6 +1,7 @@
+
+  
 <div class="container">
-  
-  
+
   <div>
     <h1 class="center-align">Hey</h1>
     <h5 class="center-align">Here's your results.</h5>
@@ -26,10 +27,32 @@
     </div>
   </div> <!-- end form -->
 
+
+  <!-- results div -->
   <div class="row">
-    <div class="col s12">
+
+    <div class="col s12 m3">
+
+      <div class="card-panel">
+
+        <p>Organization</p>
+        <% @grants.pluck(:organization).uniq.each do |org| %>
+        <div class="row collection-row">
+          <input class="my-checkbox" name=<%= org %> type="checkbox" id=<%= org %> />
+          <label for="jeff"><%= org %></label>
+        </div>
+        <% end %>
+
+      </div>
+
+      <div class="card-panel">
+        world
+      </div>
+    </div>
+
+    <div class="col s12 m9">
       <ul class="collection">
-  
+
         <% @grants.each do |grant| %>
 
           <li class="collection-item avatar">
@@ -42,13 +65,13 @@
             <p><%= grant.organization %> <br>
               <%= grant.data['deadline'] %>
             </p>
-            <a href="#!" class="secondary-content">Details</a>
+            <%= link_to "Details", grant_path(grant), class: "secondary-content" %>
           </li>
 
         <% end %>
 
       </ul>
     </div>
-  </div>
+  </div> <!-- end results div -->
 
 </div>
