--- a/rails_frontend/app/views/layouts/_navbar.html.erb
+++ b/rails_frontend/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,7 @@
 
   <div class="nav-wrapper container">
     <%= link_to 'Back', url_for(:back), class: "waves-effect waves-light btn" %>
+  </div>
         
   <ul class="right">
     <li>
