--- a/rails_frontend/app/views/grants/index.html.erb
+++ b/rails_frontend/app/views/grants/index.html.erb
@@ -15,7 +15,7 @@
           <h4>
             Search for <span class="teal-text text-lighten-2"><%= @grants.count %></span> <br>
             research funding opportunities<br>
-            from <span class="teal-text text-lighten-2"><%= @grants.uniq.pluck(:organization).count %></span> <br>
+            from <span class="teal-text text-lighten-2"><%= @funders.count %></span> <br>
             different funding organizations.
           </h4>
         </div>
