--- a/rails_frontend/app/views/grants/show2.html.erb
+++ b/rails_frontend/app/views/grants/show2.html.erb
@@ -48,7 +48,7 @@
 
       <div class="card-panel col s3 offset-s1 set-height-card">
         <h4>Organization</h4>
-        <p><%= @grant.organization %></p>
+        <p><%= @grant.funder.name %></p>
       </div>
 
       <div class="card-panel col s3 offset-s1 set-height-card">
