signup form with errors

--- a/rails_frontend/app/views/grants/index.html.erb
+++ b/rails_frontend/app/views/grants/index.html.erb
@@ -24,6 +24,8 @@
 
       <!-- Send this form via get -->
       <%= form_tag(grants_path, method: 'get', enforce_utf8: false) do %>
+
+        <%= render 'shared/error_messages' %>
     
         <div class="row">
 
