current user login navbar

--- a/rails_frontend/app/views/users/new.html.erb
+++ b/rails_frontend/app/views/users/new.html.erb
@@ -31,7 +31,7 @@
 
       <!-- Send this form via get -->
       <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/user_error_messages' %>
         <div class="row">
 
           <div class="input-field col s12">
