--- a/rails_frontend/app/views/grants/index.html.erb
+++ b/rails_frontend/app/views/grants/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :application_navbar do %>
+    <%= render 'layouts/common_navbar' %>
+<% end %>
 <div class="container">
   
   
@@ -24,8 +27,6 @@
 
       <!-- Send this form via get -->
       <%= form_tag(grants_path, method: 'get', enforce_utf8: false) do %>
-
-        <%= render 'shared/error_messages' %>
     
         <div class="row">
 
