--- a/rails_frontend/app/views/layouts/_navbar.html.erb
+++ b/rails_frontend/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,5 @@
-<!-- full size navbar -->
+
+
 <nav class="white" role="navigation">
 
   <div class="nav-wrapper container">
@@ -8,7 +9,7 @@
 
         <%= form_tag(grants_path, method: 'get', enforce_utf8: false) do %>
           <div center class="input-field">
-            <input id="search" type="search" placeholder="search again" name="q" required>
+            <input id="search" type="search" placeholder="search" name="q" required>
             <label for="search"><i class="material-icons">search</i></label>
           </div>
         <% end %>
@@ -16,7 +17,15 @@
     </ul>
     
     <ul class="right">
+      <!-- full size navbar -->
       <li><%= link_to 'Back', url_for(:back), class: 'teal-text' %></li>
+      <% if logged_in? %>
+          <!-- Dropdown Trigger -->
+          <li><%= link_to 'my profile', user_path(current_user), class: "teal-text" %></li>
+          <li><%= link_to 'log out', logout_path, method: :delete, class: "teal-text" %></li>
+      <% else %>
+          <li><%= link_to "log in", login_path, class: "teal-text" %></li>
+      <% end %>
     </ul>
     
 </nav>
