--- a/rails_frontend/app/views/users/new.html.erb
+++ b/rails_frontend/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :application_navbar do %>
+    <%= render 'layouts/common_navbar' %>
+<% end %>
+
 <div class="container">
   
   <div>
@@ -54,6 +58,9 @@
           </div>
           <div class="input-field col s12">
             <%= f.submit "Create my account", class: 'waves-effect waves-light btn' %>
+          </div>
+          <div class="col s12">
+              <p>Already registered? <%= link_to "Login", login_path %></p>
           </div>
         </div>
       </div>
