updating users completed but without tests

--- a/rails_frontend/app/views/grants/show2.html.erb
+++ b/rails_frontend/app/views/grants/show2.html.erb
@@ -53,7 +53,7 @@
 
       <div class="card-panel col s3 offset-s1 set-height-card">
         <h4>Deadline</h4>
-        <p><%= @grant.data['deadline'] %></p>
+        <p><%= @grant.deadline_pretty_print %></p>
       </div>
 
     </div>
