--- a/rails_frontend/app/views/users/new.html.erb
+++ b/rails_frontend/app/views/users/new.html.erb
@@ -33,38 +33,19 @@
 
     <div class="col s12 l6 offset-l3">
 
-      <!-- Send this form via get -->
       <%= form_for(@user) do |f| %>
-        <%= render 'shared/user_error_messages' %>
         <div class="row">
-
-          <div class="input-field col s12">
-            
-            <%= f.text_field :name %>
-            <%= f.label :name %>
-
-          </div>
-          <div class="input-field col s12">
-            <%= f.email_field :email %>
-            <%= f.label :email %>
-          </div>
-          <div class="input-field col s12">
-            <%= f.password_field :password %>
-            <%= f.label :password %>
-          </div>
-          <div class="input-field col s12">
-            <%= f.password_field :password_confirmation %>
-            <%= f.label :password_confirmation, "Confirmation" %>
-          </div>
+          <%= render 'fields', f: f %>
           <div class="input-field col s12">
             <%= f.submit "Create my account", class: 'waves-effect waves-light btn' %>
           </div>
           <div class="col s12">
-              <p>Already registered? <%= link_to "Login", login_path %></p>
+            <p>Already registered? <%= link_to "Login", login_path %></p>
           </div>
         </div>
-      </div>
       <% end %>
+        
+      
     </div>
   </div>
 </div>
